// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the Button component as a button 1`] = `
<button
  className="button is-block is-info is-large is-fullwidth"
  type="button"
>
  click me
</button>
`;

exports[`Button should render the Button component as a submit 1`] = `
<button
  className="button is-block is-info is-large is-fullwidth"
  type="submit"
>
  click me
</button>
`;
